# OOP-WGGIOS

./: CMakeLists.txt  Magazyn.cpp  Magazyn.h  MagazynList.cpp  MagazynList.h  Paleciak.cpp  Paleciak.h  Product.cpp  Product.h  Read.cpp  Read.h  Towar.cpp  Towar.h  TowarCiekly.cpp  TowarCiekly.h  TowarSypki.cpp  TowarSypki.h  main.cpp  stdin.txt  temat1.txt
